--- a/css/tooplate-simply-amazed.css
+++ b/css/tooplate-simply-amazed.css
@@ -9,6 +9,37 @@ body {
   background-color: #fff;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+}
+
+*:focus {
+  border: 2px dotted green;
+  outline-color: green;
+}
+
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  color: #fff;
+  padding: 2px 5px;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
+  border-bottom-right-radius: 8px;
+  background: #BF1722;
+  -webkit-transition: top .3s ease-out;
+  transition: top .3s ease-out;
+  z-index: 100;
+}
+
+.skip-link:focus {
+  position: absolute;
+  top: 0;
+  left: 0;
+  color: #fff;
+  outline-color: transparent;
+  -webkit-transition: top .1s ease-in;
+  transition: top .1s ease-in;
 }
 
 ol:after,
@@ -46,6 +77,8 @@ img {
 a {
   color: #99ccff;
   -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 
@@ -55,7 +88,7 @@ a:hover {
 }
 
 a:focus {
-  outline: 0;
+  outline: green;
   color: green;
 }
 
@@ -72,25 +105,38 @@ a:focus {
 .btn-primary {
   color: #fff;
   background-color: #356ba2;
-  border-color: transparent;
+  border-color: #356ba2;
 }
 
-.btn-primary.active, .btn-primary:active, .btn-primary.focus, .btn-primary:focus, .btn-primary.active.focus, .btn-primary.active:focus, .btn-primary.active:hover, .btn-primary:active.focus, .btn-primary:active:focus, .btn-primary:active:hover, .btn-primary:hover {
+.btn-primary.active, 
+.btn-primary:active, 
+.btn-primary.focus, 
+.btn-primary:focus, 
+.btn-primary.active.focus, 
+.btn-primary.active:focus, 
+.btn-primary.active:hover, 
+.btn-primary:active.focus, 
+.btn-primary:active:focus, 
+.btn-primary:active:hover, 
+.btn-primary:hover {
   color: #fff;
   background-color: #99ccff;
-  border-color: transparent;
+  /* border-color: transparent; */
   -webkit-box-shadow: none;
   box-shadow: none;
 }
 
-.btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active {
+
+.btn-primary:not(:disabled):not(.disabled).active, 
+.btn-primary:not(:disabled):not(.disabled):active {
   background-color: #99ccff;
-  border-color: transparent;
+  /* border-color: transparent; */
   -webkit-box-shadow: none;
   box-shadow: none;
 }
 
-.btn-primary:not(:disabled):not(.disabled).active:focus, .btn-primary:not(:disabled):not(.disabled):active:focus {
+.btn-primary:not(:disabled):not(.disabled).active:focus, 
+.btn-primary:not(:disabled):not(.disabled):active:focus {
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -119,7 +165,7 @@ a:focus {
 
 .form-control:focus {
   border-bottom: 1px solid #356ba2;
-  outline: 0;
+  /* outline: 0; */
   -webkit-box-shadow: none;
   box-shadow: none;
   background-color: transparent;
@@ -202,7 +248,7 @@ textarea.form-control {
   height: 47px;  
   padding: 0;
   margin: 0;
-  outline: 0;
+  /* outline: 0; */
   border: 0;
   z-index: 9;
   -webkit-box-shadow: none;
@@ -227,10 +273,10 @@ textarea.form-control {
 }
 
 .navbar-button:focus {
-  border: 0;
-  outline: 0;
+  background-color: #6699cc;
+  /* outline: 0;
   -webkit-box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0.3);
-  box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0.3);
+  box-shadow: 0px 5px 10px 0px rgba(50, 50, 50, 0.3); */
 }
 
 .navbar-button .menu_icon {
@@ -238,9 +284,17 @@ textarea.form-control {
   padding-top: 1px;
   float: left;
   width: 25px;
-  height: 22px;
+  height: 30px;
   position: relative;
   cursor: pointer;
+}
+
+.navbar-button .menu_icon .menu-label {
+  display: block;
+  position: absolute;
+  top: 22px;
+  font-size: .6rem;
+  font-weight: 600;
 }
 
 .navbar-button .menu_icon .icon-bar {
@@ -259,12 +313,7 @@ textarea.form-control {
 .navbar-button .menu_icon .icon-bar:nth-child(1) {
   top: 10px;
   -webkit-transform: rotate(145deg);
-  /* WebKit */
-  /* Mozilla */
-  /* Opera */
-  /* Internet Explorer */
   transform: rotate(140deg);
-  /* CSS3 */
 }
 
 .navbar-button .menu_icon .icon-bar:nth-child(2) {
@@ -276,33 +325,18 @@ textarea.form-control {
 .navbar-button .menu_icon .icon-bar:nth-child(3) {
   top: 10px;
   -webkit-transform: rotate(-145deg);
-  /* WebKit */
-  /* Mozilla */
-  /* Opera */
-  /* Internet Explorer */
   transform: rotate(-140deg);
-  /* CSS3 */
 }
 
 .navbar-button.collapsed .icon-bar {
   -webkit-transform: rotate(0deg);
-  /* WebKit */
-  /* Mozilla */
-  /* Opera */
-  /* Internet Explorer */
   transform: rotate(0deg);
-  /* CSS3 */
 }
 
 .navbar-button.collapsed .icon-bar:nth-child(1) {
   top: 0;
   -webkit-transform: rotate(0deg);
-  /* WebKit */
-  /* Mozilla */
-  /* Opera */
-  /* Internet Explorer */
   transform: rotate(0deg);
-  /* CSS3 */
 }
 
 .navbar-button.collapsed .icon-bar:nth-child(2) {
@@ -314,12 +348,7 @@ textarea.form-control {
 .navbar-button.collapsed .icon-bar:nth-child(3) {
   top: 20px;
   -webkit-transform: rotate(0deg);
-  /* WebKit */
-  /* Mozilla */
-  /* Opera */
-  /* Internet Explorer */
   transform: rotate(0deg);
-  /* CSS3 */
 }
 
 /* <<< Navigation >>> */
@@ -368,8 +397,8 @@ textarea.form-control {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   padding-left: 66px;
   margin-bottom: 38px;
 }
@@ -396,7 +425,7 @@ textarea.form-control {
 .navbar .navbar-nav > .nav-item.active > a.nav-link,
 .navbar .navbar-nav > .nav-item.current-menu-ancestor > a.dropdown-toggle {
   background-color: transparent;
-  outline: 0;
+  /* outline: 0; */
   color: #99ccff;
   transition: all 0.3s ease;
 }
@@ -791,8 +820,6 @@ textarea.form-control {
   width: 119px;
   height: 119px;
   display: block;
-  border: 1px solid #fff;
-  /* border-radius: 100%; */
   color: #fff;
   font-size: 32px;
   display: -webkit-box;
@@ -805,7 +832,12 @@ textarea.form-control {
       -ms-flex-align: center;
           align-items: center;
   text-transform: uppercase;
-  margin-bottom: 30px;
+  margin: 0 auto 30px;
+}
+
+.icn img {
+  border: 1px solid #fff;
+  border-radius: 100%; 
 }
 
 @media (max-width: 767px) {
@@ -813,17 +845,20 @@ textarea.form-control {
 }
 
 .work-section .item h3 {
-  color: #ffccff;
+  color: #11128a;
   text-transform: uppercase;
   font-size: 27px;
-  letter-spacing: -1px;
   margin-bottom: 9px;
+  text-align: center;
 }
 
 .work-section .item p {
-  color: #fff;
+  color: #464646;
   line-height: 31px;
   margin-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 20px;
+  padding: 10px;
 }
 
 .work-section .title {
@@ -1113,10 +1148,11 @@ figure.effect-julia:hover p {
 }
 
 .gmap-canvas {
-  overflow:hidden;
-  background:none!important;
-  height:400px;
-  width:100%;
+  overflow: hidden;
+  background: none!important;
+  height: 300px;
+  width: 100%;
+  border: 1px solid #000;
 }
 
 /* <<< footer >>> */
