--- a/css/tooplate-simply-amazed.css
+++ b/css/tooplate-simply-amazed.css
@@ -83,13 +83,18 @@ a {
 }
 
 a:hover {
-  color: green;
+  color: #ff0;
   text-decoration: none;
 }
 
 a:focus {
   outline: green;
   color: green;
+}
+
+a.nav-link:focus {
+  border-top: 2px dotted #ff0;
+  border-bottom: 2px dotted #ff0;
 }
 
 /* <<< btn override >>> */
@@ -741,9 +746,10 @@ textarea.form-control {
 /* <<< Affiliations >>> */
 
 .affiliation-section .title { 
-  color: #fff;
+  color: #333;
+  background-color: #fff;
   margin-bottom: 50px; 
-  border-bottom: 1px solid #fff;
+  border-bottom: 1px solid #333;
 }
 
 .affiliation-section .simple {
@@ -845,7 +851,9 @@ textarea.form-control {
 }
 
 .work-section .item h3 {
-  color: #11128a;
+  color: #fff;
+  background-color: #464646;
+  border-radius: 20px;
   text-transform: uppercase;
   font-size: 27px;
   margin-bottom: 9px;
@@ -853,25 +861,23 @@ textarea.form-control {
 }
 
 .work-section .item p {
-  color: #464646;
+  color: #000;
   line-height: 31px;
   margin-bottom: 0;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.9);
   border-radius: 20px;
   padding: 10px;
 }
 
 .work-section .title {
+  color: #fff;
+  font-size: 32px;
+  padding-right: 13px;
+  background-color: #464646;
   margin-top: 5px;
   margin-left: 1px;
   margin-bottom: 25px;
   border-bottom: 1px solid #fff;
-}
-
-.work-section .title h2 {
-  color: #fff;
-  font-size: 32px;
-  margin-bottom: 12px;
 }
 
 /* <<< Gallery section >>> */
@@ -953,6 +959,7 @@ textarea.form-control {
 }
 
 .gallery-section .title {
+  background-color: rgb(191, 223, 255);
   padding-right: 13px;
   margin-bottom: 80px;
   border-bottom: 1px solid #3085a3;
