--- a/css/simply-amazed.css
+++ b/css/simply-amazed.css
@@ -655,7 +655,7 @@ textarea.form-control {
   background-color: rgb(102 153 204 / 0.8); 
 }
 
-.banner-section .logo-fa {  
+.banner-section .logo-img {  
   color: #fff;
   max-width: 400px;
   margin-left: 5px;
@@ -665,19 +665,23 @@ textarea.form-control {
   margin-bottom: 60px;
 }
 
+.banner-section .logo-img img {  
+  border-radius: 50%;
+}
+
 @media (max-width: 991px) {
-  .banner-section .logo-fa { margin: 0 auto 30px; }
+  .banner-section .logo-img { margin: 0 auto 30px; }
 }
 
 @media (max-width: 767px) {
-  .banner-section .logo-fa {
+  .banner-section .logo-img {
     font-size: 28px;
     padding-top: 20px;
     padding-bottom: 15px;
   }
 }
 
-.banner-section .logo-fa span {
+.banner-section .logo-img span {
   font-size: 38px;
   display: block;
   text-transform: uppercase;
@@ -685,7 +689,7 @@ textarea.form-control {
 }
 
 @media (max-width: 767px) {
-  .banner-section .logo-fa span {
+  .banner-section .logo-img span {
     font-size: 32px;
     margin-bottom: 10px;
   }
@@ -722,8 +726,24 @@ textarea.form-control {
   max-width: 500px;
 }
 
+@media (max-width: 1100px) {
+  .banner-section .simple {
+    margin: auto;
+    padding: 20px 45px 20px 45px;
+    top: -180px;
+    left: 50px;
+    max-width: 85%;
+  }
+}
+
 @media (max-width: 991px) {
-  .banner-section .simple { margin-left: 0; }
+  .banner-section .simple {
+    margin: auto;
+    padding: 20px 45px 20px 45px;
+    top: -150px;
+    left: 50px;
+    max-width: auto;
+  }
 }
 
 @media (max-width: 767px) {
@@ -784,6 +804,24 @@ textarea.form-control {
   max-height: 200px;
   width: 200px;
   height: 200px;
+}
+
+@media (max-width: 1100px) {
+  .affiliation-section .flex-container .flex-item img { 
+    max-width: 130px;
+    max-height: 130px;
+    width: 130px;
+    height: 130px;
+  }
+}
+
+@media (max-width: 767px) {
+  .affiliation-section .flex-container .flex-item img { 
+    max-width: 80px;
+    max-height: 80px;
+    width: 80px;
+    height: 80px;
+  }
 }
 
 /* <<< Work Side >>> */
