--- a/css/simply-amazed.css
+++ b/css/simply-amazed.css
@@ -189,31 +189,38 @@ textarea.form-control {
 
 /* <<< outer >>> */
 #outer {
-  position: relative;
   width: 100%;
   min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 
 /* <<< Header >>> */
-.header {
+.header, .footer {
   position: fixed;
   right: 0;
-  width: 26%;
-  height: 100%;
-  background-color: #356ba2;
-  overflow-y: auto;
-  z-index: 1;
+  width: 26vw;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
 }
+
+.header {
+  height: calc(100vh - 40px);
+  background-color: #356ba2;
+  align-items: flex-center;
+  z-index: 1;
+}
+.footer {
+  height: 40px;
+  min-height: 40px;
+  max-height: 40px;
+  background-color: #1a4b7c;
+  justify-content: space-between;
+  padding: 8px 1vw;
+  top: calc(100vh - 40px);
+}
+.footer p { color: #fff; }
 
 .header.open { right: 0; }
 .design { color: #fff; }
@@ -916,7 +923,7 @@ figure.fig-effect:hover p {
   border: 1px solid #000;
 }
 
-/* <<< footer >>> */
+/* <<< footer >>> 
 .footer {
   position: relative;
   background-color: #6699cc;
@@ -925,9 +932,8 @@ figure.fig-effect:hover p {
   padding-bottom: 15px;
   position: static;
   margin-top: 30px;
-  /* <<< Dummy Side >>> */
 }
-
+*/
 .container {
   padding-left: 50px;
   padding-right: 50px;
@@ -951,11 +957,11 @@ figure.fig-effect:hover p {
 
 @media (min-height: 600px){  
   .contact-section { position: relative; }
-  .footer {
+  /*.footer {
     position: absolute;
     bottom: 0;
     left: 60px;
-  }
+  }*/
 }
 
 @media (max-width: 575px) {
@@ -1181,13 +1187,13 @@ figure.fig-effect:hover p {
 }
 
 @media (max-width: 1733px) {
-  .footer {
+  /*.footer {
     left: 0;
     padding-top: 30px;
-  }
+  }*/
 }
 
 @media (max-width: 1800px) {
-  .footer { left: 15px; }
+  /*.footer { left: 15px; }*/
   .container-2 { max-width: 1250px; }
 }
