--- a/css/simply-amazed.css
+++ b/css/simply-amazed.css
@@ -191,11 +191,12 @@ a:focus {
 
 .work-section .item h3 {
   color: #fff;
-  background-color: #464646;
+  background-color: #5a595b;
   border-radius: 20px;
   text-transform: uppercase;
   font-size: 27px;
-  margin-bottom: 9px;
+  margin-bottom: 10px;
+  padding: 3px 0;
   text-align: center;
 }
 
