Positioned certs better

--- a/css/simply-amazed.css
+++ b/css/simply-amazed.css
@@ -259,6 +259,10 @@ a:focus {
 
 /* <<< Gallery section >>> */
 
+.gallery-slider {
+    margin-top: 15vh;
+}
+
 .gallery-slider figure {
     position: relative;
     float: left;
